--- a/style.css
+++ b/style.css
@@ -25,8 +25,9 @@
     font-family: 'Franklin Gothic Medium', 'Arial Narrow';
     font-size: 30px;}
     .footer{
+    margin-top: 0px;
     width:100%;
-    height:80px;
+    height:50px;
     position:absolute;
     text-align:center;
     background-color:black;
@@ -39,7 +40,7 @@
     border:2PX solid green;
     background-color: black;
     width:100%;
-    height:630px;
+    height:750px;
     box-shadow:0 1px 1em rgba(0, 0, 0, 2);
     float:left;}
     .CONTENT-TITLE{
@@ -49,19 +50,21 @@
     color: green;
     font-family:'Franklin Gothic Medium', 'Arial Narrow';
     margin-left:10px;
+    margin-bottom: 0px;
     font-size:30px;}
     .CONTENT P{
     font-family:'Franklin Gothic Medium', 'Arial Narrow';
-    margin-left:10px;}
+    margin-left:0px;}
     .CONTENT-TEXT img{
     border: 3PX solid green;
-    margin-top:0px;
-    margin-left:20px;
+    margin-top:200px;
+    margin-left:10px;
     width: 800px;;
     height: 480px;}
     .SCROLL-TEXT{
-    width:1900px;
-    height:20px;
+    margin-bottom: 10px;
+    width:100%;
+    height:25px;
     font-family:'Franklin Gothic Medium', 'Arial Narrow';
     background-color:black;
     color: green;}
@@ -72,17 +75,13 @@
     padding-right: 30px;}
     .MENU UL A{ background-color: black;
     text-decoration: none;
-    margin-bottom: 5px;
     padding:2px;
-    border-radius: 5px;
+    border-radius: 100px;
     color: green;}
     .MENU UL A:hover{
     background-color: green;
     text-decoration: none;
-    margin-bottom: 5px;
     padding:2px;
-    border-radius: 5px;
+    border-radius:100px;
     color: black;}
-    .MENU LI:active{
-    position: relative;
-    TOP:1px}
+    .MENU LI:active{position: relative;TOP:1px}
