--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
     body{margin:0;}
     .HEADER{font-family:'Franklin Gothic Medium', 'Arial Narrow';
     width:100%;
-    height: 180px;
+    height:19%;
     background-color:black;
     font-family: Arial, Helvetica, sans-serif;
     padding:0;}
@@ -27,7 +27,7 @@
     .footer{
     margin-top: 0px;
     width:100%;
-    height:50px;
+    height:5%;
     position:absolute;
     text-align:center;
     background-color:black;
@@ -40,7 +40,7 @@
     border:2PX solid green;
     background-color: black;
     width:100%;
-    height:750px;
+    height:75%;
     box-shadow:0 1px 1em rgba(0, 0, 0, 2);
     float:left;}
     .CONTENT-TITLE{
@@ -56,15 +56,14 @@
     font-family:'Franklin Gothic Medium', 'Arial Narrow';
     margin-left:0px;}
     .CONTENT-TEXT img{
-    border: 3PX solid green;
-    margin-top:200px;
+    margin-top:50px;
     margin-left:10px;
-    width: 800px;;
-    height: 480px;}
+    width:65%;;
+    height:63%;}
     .SCROLL-TEXT{
     margin-bottom: 10px;
     width:100%;
-    height:25px;
+    height:5%;
     font-family:'Franklin Gothic Medium', 'Arial Narrow';
     background-color:black;
     color: green;}
