--- a/.vscode/style.css
+++ b/.vscode/style.css
@@ -4,47 +4,47 @@
     height:19%;
     background-color:black;
     font-family: Arial, Helvetica, sans-serif;
-    padding:0;}
+    padding:0%;}
     .HEADER img{
     font-family:'Franklin Gothic Medium', 'Arial Narrow';
-    margin-top:10px;
-    margin-left:10px;
-    width:70px;;
-    height:70px;
+    margin-top:1%;
+    margin-left:1%;
+    width:10%;
+    height:80%;
     float:left;}
+
     .INFO{
     font-family:'Franklin Gothic Medium', 'Arial Narrow';
     float: left;
     color: green;
-    margin-left: 10px;
-    padding: 0;}
+    margin-left: 1%;
+    padding: 0%;}
     .INFO H4{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow';
     color: green;}
     .INFO h1{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow';
-    font-size: 30px;}
+    font-size: 100%;}
     .footer{
-    margin-top: 0px;
+    margin-top: 0%;
     width:100%;
-    height:5%;
+    height:6%;
     position:absolute;
     text-align:center;
     background-color:black;
     font-family:'Franklin Gothic Medium', 'Arial Narrow';
-    font-size:50px;
+    font-size:250%;
     color:green;
-    bottom:0;}
+    bottom:0%;}
     .LOOK{
     font-family:'Franklin Gothic Medium', 'Arial Narrow';
-    border:2PX solid green;
+    border:2% solid green;
     background-color: black;
     width:100%;
     height:75%;
-    box-shadow:0 1px 1em rgba(0, 0, 0, 2);
+    box-shadow:0 1% 1em rgba(0, 0, 0, 2);
     float:left;}
     .CONTENT-TITLE{
-    border-bottom: 3PX solid green;
     font-family:'Franklin Gothic Medium', 'Arial Narrow';}
     .CONTENT h3{
     color: green;
@@ -56,14 +56,14 @@
     font-family:'Franklin Gothic Medium', 'Arial Narrow';
     margin-left:0px;}
     .CONTENT-TEXT img{
-    margin-top:50px;
-    margin-left:10px;
-    width:65%;;
-    height:63%;}
+    margin-top:5%;
+    margin-left:1%;
+    width:80%;;
+    height:70%;}
     .SCROLL-TEXT{
     margin-bottom: 10px;
-    width:100%;
-    height:5%;
+    width:254%;
+    height:8%;
     font-family:'Franklin Gothic Medium', 'Arial Narrow';
     background-color:black;
     color: green;}
@@ -84,3 +84,4 @@
     border-radius:100px;
     color: black;}
     .MENU LI:active{position: relative;TOP:1px}
+    
